--- a/public/tour.html
+++ b/public/tour.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
-    <title>Isra API</title>
+    <title>API Isra</title>
 
     <script src="https://api.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js"></script>
     <link
